# transformer

./: LICENSE  README.md  main.py  pyproject.toml  requirements.txt  tokenizer_hindi_sentence.json
.lingma/rules/: OUTPUT.md
docs/: api_reference.py  components.md  decoder.md  encoder.md  index.md  model.md  quick_reference.md  training.md  transformer_visualization.html
notebooks/: data.ipynb  notebook.ipynb
runs/model/: events.out.tfevents.1769456888.Divys-MacBook-Air.local.41106.0  events.out.tfevents.1769456915.Divys-MacBook-Air.local.41681.0  events.out.tfevents.1769456933.Divys-MacBook-Air.local.42145.0  events.out.tfevents.1769456955.Divys-MacBook-Air.local.43021.0  events.out.tfevents.1769456981.Divys-MacBook-Air.local.43929.0  events.out.tfevents.1769457165.Divys-MacBook-Air.local.46520.0  events.out.tfevents.1769535631.Divys-MacBook-Air.local.78491.0  events.out.tfevents.1769535757.Divys-MacBook-Air.local.79780.0  events.out.tfevents.1769535797.Divys-MacBook-Air.local.80302.0  events.out.tfevents.1769535836.Divys-MacBook-Air.local.80836.0  events.out.tfevents.1769536022.Divys-MacBook-Air.local.82646.0  events.out.tfevents.1769536050.Divys-MacBook-Air.local.83053.0  events.out.tfevents.1769536109.Divys-MacBook-Air.local.83770.0  events.out.tfevents.1769536211.Divys-MacBook-Air.local.84898.0  events.out.tfevents.1769536735.Divys-MacBook-Air.local.89618.0  events.out.tfevents.1769536750.Divys-MacBook-Air.local.89993.0  events.out.tfevents.1769536764.Divys-MacBook-Air.local.90293.0
src/: data.ipynb  model.py  notebook.ipynb  transformer.py
(+8 files in other folders)
