[project]
name = "transformer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.5.0",
    "pandas>=3.0.0",
    "python-dotenv>=1.2.1",
    "tokenizers>=0.22.2",
    "torch>=2.10.0",
    "transformers>=4.57.6",
]
